# s01-drf-lawliet-zzw

./: .gitignore  README.md  pyproject.toml
src/app1/: models.py  urls.py  views.py
src/app1/migrations/: 0001_initial.py
src/mysite/: settings.py  urls.py
